@@ -1,15 +1,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<<<<<<< HEAD
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+=======
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+>>>>>>> gitlab/master
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ec.gob.firmadigital</groupId>
     <artifactId>api</artifactId>
+<<<<<<< HEAD
     <version>3.1.1-SNAPSHOT</version>
+=======
+    <version>4.0.0-SNAPSHOT</version>
+>>>>>>> gitlab/master
     <packaging>war</packaging>
 
     <name>firmadigital-api</name>
     <description>API de Firma Digital.</description>
+<<<<<<< HEAD
     <url>http://www.firmadigital.gob.ec</url>
+=======
+    <url>https://www.firmadigital.gob.ec</url>
+>>>>>>> gitlab/master
     <licenses>
         <license>
             <name>GNU General Public License, Version 3</name>
@@ -22,7 +34,11 @@
             <name>Ricardo Arguello</name>
             <email>ricardo.arguello@soportelibre.com</email>
             <organization>Soporte Libre</organization>
+<<<<<<< HEAD
             <organizationUrl>http://www.soportelibre.com</organizationUrl>
+=======
+            <organizationUrl>https://www.soportelibre.com</organizationUrl>
+>>>>>>> gitlab/master
         </developer>
         <developer>
             <name>Misael Fernández Correa</name>
@@ -40,17 +56,27 @@
     </scm>
 
     <properties>
+<<<<<<< HEAD
+=======
+        <java.version>17</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+>>>>>>> gitlab/master
         <jakartaee>10.0.0</jakartaee>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <failOnMissingWebXml>false</failOnMissingWebXml>
     </properties>
 
     <dependencies>
+<<<<<<< HEAD
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
+=======
+        <!--consumo de servicios web-->
+>>>>>>> gitlab/master
         <dependency>
             <groupId>jakarta.platform</groupId>
             <artifactId>jakarta.jakartaee-api</artifactId>
@@ -58,6 +84,26 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+<<<<<<< HEAD
+=======
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
+            <version>2.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxrs</artifactId>
+            <version>3.15.6.Final</version>
+            <type>jar</type>
+        </dependency>
+        <!--consumo de servicios web-->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+        <dependency>
+>>>>>>> gitlab/master
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
@@ -71,7 +117,11 @@
             <plugin>
                 <groupId>org.wildfly.plugins</groupId>
                 <artifactId>wildfly-maven-plugin</artifactId>
+<<<<<<< HEAD
                 <version>4.2.0.Final</version>
+=======
+                <version>5.1.1.Final</version>
+>>>>>>> gitlab/master
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -85,6 +135,19 @@
                     </archive>
                 </configuration>
             </plugin>
+<<<<<<< HEAD
+=======
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+>>>>>>> gitlab/master
         </plugins>
     </build>
 </project>
